--- a/summarywindow.ui
+++ b/summarywindow.ui
@@ -259,7 +259,11 @@ border: 1px solid grey;
               <string>Bold (Ctrl+B)</string>
              </property>
              <property name="text">
-              <string>B</string>
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="images.qrc">
+               <normaloff>:/icons/bold_icon.png</normaloff>:/icons/bold_icon.png</iconset>
              </property>
              <property name="flat">
               <bool>true</bool>
@@ -296,7 +300,11 @@ border: 1px solid grey;
               <string>Italic (Ctrl+I)</string>
              </property>
              <property name="text">
-              <string>I</string>
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="images.qrc">
+               <normaloff>:/icons/italic_icon.png</normaloff>:/icons/italic_icon.png</iconset>
              </property>
              <property name="flat">
               <bool>true</bool>
@@ -332,7 +340,11 @@ border: 1px solid grey;
               <string>Underline (Ctrl+U)</string>
              </property>
              <property name="text">
-              <string>U</string>
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="images.qrc">
+               <normaloff>:/icons/underline_icon.png</normaloff>:/icons/underline_icon.png</iconset>
              </property>
              <property name="flat">
               <bool>true</bool>
