--- a/extselectiondialog.ui
+++ b/extselectiondialog.ui
@@ -27,7 +27,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QListWidget" name="listWidget"/>
+      <widget class="QListWidget" name="listWidget">
+       <property name="selectionMode">
+        <enum>QAbstractItemView::SingleSelection</enum>
+       </property>
+      </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horLayButtons">
@@ -52,6 +56,12 @@
            <height>20</height>
           </size>
          </property>
+         <property name="maximumSize">
+          <size>
+           <width>80</width>
+           <height>25</height>
+          </size>
+         </property>
          <property name="text">
           <string>Select All</string>
          </property>
@@ -65,6 +75,12 @@
            <height>20</height>
           </size>
          </property>
+         <property name="maximumSize">
+          <size>
+           <width>80</width>
+           <height>25</height>
+          </size>
+         </property>
          <property name="text">
           <string>Deselect All</string>
          </property>
@@ -76,6 +92,12 @@
           <size>
            <width>80</width>
            <height>20</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>80</width>
+           <height>25</height>
           </size>
          </property>
          <property name="text">
