--- a/extselectiondialog.ui
+++ b/extselectiondialog.ui
@@ -62,6 +62,9 @@
            <height>25</height>
           </size>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
          <property name="text">
           <string>Select All</string>
          </property>
@@ -81,6 +84,9 @@
            <height>25</height>
           </size>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
          <property name="text">
           <string>Deselect All</string>
          </property>
@@ -99,6 +105,9 @@
            <width>80</width>
            <height>25</height>
           </size>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="text">
           <string>Continue</string>
