Delete their own pointers on CloseEvent

--- a/summarywindow.ui
+++ b/summarywindow.ui
@@ -66,6 +66,9 @@ border: 1px solid grey;
 }
 </string>
           </property>
+          <property name="horizontalScrollBarPolicy">
+           <enum>Qt::ScrollBarAlwaysOff</enum>
+          </property>
          </widget>
         </item>
        </layout>
